Front page: implementar editor de bloques y layout en theme.json

--- a/site/web/app/themes/sage/resources/styles/common/global.css
+++ b/site/web/app/themes/sage/resources/styles/common/global.css
@@ -65,6 +65,22 @@ main {
       }
     }
   }
+
+  .contenido > * {
+    max-width: 768px;
+    margin-left: auto !important;
+    margin-right: auto !important;
+
+    &.alignwide {
+      max-width: 1024px;
+      margin-left: auto !important;
+      margin-right: auto !important;
+    }
+
+    &.alignfull {
+      max-width: none;
+    }
+  }
 }
 
 #fondo-slider {
