loop tienda desktop (faltan botones)

--- a/site/web/app/themes/sage/resources/styles/app.css
+++ b/site/web/app/themes/sage/resources/styles/app.css
@@ -6,6 +6,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+@import 'fonts/fonts';
 @import 'layouts/header';
 @import 'layouts/front-page';
 @import 'layouts/footer';
