--- a/site/web/app/themes/sage/resources/styles/layouts/shop.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/shop.css
@@ -1,3 +1,32 @@
-.post-type-archive-product,
-.tax-artist {
+.post-type-archive-product {
+  .card {
+    perspective: 1000px;
+  }
+
+  .card-inner {
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+  }
+
+  .card:hover .card-inner {
+    transform: rotateY(180deg);
+  }
+
+  .card-back {
+    backface-visibility: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+  }
+
+  .card-front {
+    backface-visibility: hidden;
+    width: 100%;
+    height: 100%;
+  }
+
+  .card-back {
+    transform: rotateY(180deg);
+  }
 }
