--- a/site/web/app/themes/sage/resources/styles/app.css
+++ b/site/web/app/themes/sage/resources/styles/app.css
@@ -26,7 +26,7 @@
 @import 'componentes/lightgallery';
 
 @import '@glidejs/glide/dist/css/glide.core.min.css';
-@import 'Select2/select2-bootstrap.css';
+/* @import 'Select2/select2-bootstrap.css'; */
 
 /* $lg-path-fonts: 'https://cdn.jsdelivr.net/npm/lightgallery@2.1.2/fonts';
 $lg-path-images: 'https://cdn.jsdelivr.net/npm/lightgallery@2.1.2/images'; */
