--- a/site/web/app/themes/sage/resources/styles/common/global.css
+++ b/site/web/app/themes/sage/resources/styles/common/global.css
@@ -114,3 +114,7 @@ main {
 .woocommerce-Price-currencySymbol {
   margin-left: 0.3em;
 }
+
+/* .clip-path-elipse {
+  clip-path: ellipse(50% 50% at 50% 50%);
+} */
