--- a/site/web/app/themes/sage/resources/styles/layouts/single-variable-product.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/single-variable-product.css
@@ -6,7 +6,7 @@
     display: none;
   }
 
-  .ftbs_variationsTableRowPadContainer {
+  /* .ftbs_variationsTableRowPadContainer {
     @apply border-black;
 
     &.ftbs_variationsTableRowPadContainer_inactive {
@@ -21,5 +21,5 @@
         @apply invisible;
       }
     }
-  }
+  } */
 }
