Añadir colores transparent, black y white a tailwind

--- a/site/web/app/themes/sage/resources/styles/componentes/forms.css
+++ b/site/web/app/themes/sage/resources/styles/componentes/forms.css
@@ -16,7 +16,7 @@ footer {
       }
 
       input[type='submit'] {
-        /* @apply text-azul bg-transparent; */
+        @apply text-azul bg-transparent;
       }
     }
   }
