--- a/site/web/app/themes/sage/resources/styles/layouts/single-variable-product.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/single-variable-product.css
@@ -3,7 +3,7 @@
   .woocommerce-variation-description,
   .woocommerce-variation-availability,
   .woocommerce-variation-add-to-cart .qty {
-    display: none;
+    /* display: none; */
   }
 
   /* .ftbs_variationsTableRowPadContainer {
