single product variations button corrección

--- a/site/web/app/themes/sage/resources/styles/layouts/single-product.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/single-product.css
@@ -84,6 +84,7 @@
       text-transform: uppercase;
       letter-spacing: 0.05em;
       padding: 1rem;
+      color: blue;
     }
 
     .single_variation_wrap {
