--- a/site/web/app/themes/sage/resources/styles/layouts/single-product.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/single-product.css
@@ -33,7 +33,7 @@
         .label {
           background-color: #fff;
           height: 20px;
-          padding: 0 1rem;
+          padding: 14px 19px 12px;
           text-align: left;
           min-width: 200px;
         }
@@ -59,6 +59,7 @@
               padding: 10px 15px 8px;
               border: 2px solid transparent;
               border-radius: 5px;
+              min-height: 50px;
             }
 
             &.cfvsw-swatches-disabled .cfvsw-swatch-inner {
