Single product layout

--- a/site/web/app/themes/sage/resources/styles/layouts/single-product.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/single-product.css
@@ -27,15 +27,12 @@
       border-collapse: separate;
       border-spacing: 0 1em;
       tbody > tr {
-        position: relative;
-        margin-bottom: 1rem;
-
         .label {
-          background-color: #fff;
           height: 20px;
           padding: 14px 19px 12px;
+          background-color: #fff;
           text-align: left;
-          min-width: 200px;
+          font-weight: 300;
         }
 
         .reset_variations {
@@ -75,6 +72,14 @@
             .cfvsw-swatch-inner {
               border-color: blue;
             }
+          }
+        }
+      }
+
+      @screen md {
+        tbody > tr {
+          .label {
+            min-width: 200px;
           }
         }
       }
