--- a/site/web/app/themes/sage/resources/styles/fonts/fonts.css
+++ b/site/web/app/themes/sage/resources/styles/fonts/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Bugrino';
+  font-family: Bugrino;
   src: url('../fonts/bugrino/Bugrino-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
