--- a/site/web/app/themes/sage/resources/styles/common/global.css
+++ b/site/web/app/themes/sage/resources/styles/common/global.css
@@ -7,7 +7,7 @@ html {
 }
 
 .main {
-  @media (min-width: 640px) {
+  @media (width >= 640px) {
     margin-top: 10rem;
 
     .home &,
@@ -26,6 +26,7 @@ body {
 
 #fondo {
   @apply fixed inset-0 bg-fondo-medio;
+
   background-size: 10px 10px;
 }
 
@@ -48,7 +49,7 @@ main {
     }
 
     &:visited {
-      color: rgb(108, 115, 153);
+      color: #6c7399;
     }
   }
 
@@ -97,6 +98,7 @@ main {
 .woocommerce-error,
 .woocommerce-info {
   @apply bg-allo;
+
   padding: 1em;
   border: 1px solid #000;
   text-align: center;
