--- a/site/web/app/themes/sage/resources/styles/layouts/cart.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/cart.css
@@ -26,6 +26,7 @@ body.cart {
           th {
             @apply text-right pr-6 align-top py-3;
           }
+
           td {
             @apply py-3 pr-6;
           }
@@ -34,7 +35,7 @@ body.cart {
             @apply text-3xl;
           }
         }
-  
+
         .shipping {
           .shipping-calculator-form {
             p {
@@ -47,11 +48,8 @@ body.cart {
             @apply btn my-6 inline-block;
           }
 
-
-
           .select2-container--default {
             .select2-selection {
-              -webkit-box-shadow: 0;
               box-shadow: 0;
               background-color: #fff;
               border: 0;
@@ -60,7 +58,7 @@ body.cart {
               min-height: 3rem;
               text-align: left;
               margin-bottom: 0.1rem;
-  
+
               .select2-selection__rendered,
               .select2-selection__arrow {
                 display: block;
@@ -68,10 +66,9 @@ body.cart {
               }
 
               .select2-selection__arrow {
-                margin-top: 0.5rem;                
+                margin-top: 0.5rem;
               }
             }
-
           }
         }
       }
@@ -88,13 +85,11 @@ body.cart {
 
   .select2-dropdown {
     border: none !important;
+
     li {
       padding: 0.8rem 1.5rem;
     }
   }
-
-  
-
 
   .ticket {
     .tk-row {
@@ -131,8 +126,10 @@ body.cart {
             width: 4em;
           }
 
-          input[type=number] {
-            -moz-appearance: textfield;
+          /* stylelint-disable property-no-vendor-prefix */
+
+          input[type='number'] {
+            appearance: textfield;
             width: 100%;
             display: block;
             padding: 1em;
@@ -143,6 +140,8 @@ body.cart {
               margin: 0;
             }
           }
+
+          /* stylelint-enable */
         }
 
         &.actions {
@@ -158,7 +157,7 @@ body.cart {
         }
       }
 
-      @media (min-width: 786px) {
+      @media (width < 786px) {
         .tk-cell {
           &.product-thumbnail {
             width: 13rem;
@@ -193,5 +192,3 @@ body.cart {
     }
   }
 }
-
-
