--- a/site/web/app/themes/sage/resources/styles/layouts/shop.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/shop.css
@@ -19,6 +19,7 @@
     width: 100%;
     height: 100%;
     top: 0;
+    transform: rotateY(180deg);
   }
 
   .card-front {
@@ -27,11 +28,7 @@
     height: 100%;
   }
 
-  .card-back {
-    transform: rotateY(180deg);
-  }
-
-  @media (min-width: 786px) {
+  @media (width < 786px) {
     .product .card-front {
       img {
         width: auto;
@@ -42,7 +39,7 @@
     }
   }
 
-  @media (min-width: 1024px) {
+  @media (width < 1024px) {
     .product .card-front {
       img {
         max-width: 33.3vw;
@@ -51,7 +48,7 @@
     }
   }
 
-  @media (min-width: 1280px) {
+  @media (width < 1280px) {
     .product .card-front {
       img {
         max-width: 25vw;
@@ -70,15 +67,13 @@
     text-transform: uppercase;
     text-align: center;
     letter-spacing: 0.2em;
-    -webkit-appearance: none; /* Deshabilitar la apariencia por defecto en WebKit */
-    -moz-appearance: none; /* Deshabilitar la apariencia por defecto en Mozilla */
     appearance: none; /* Deshabilitar la apariencia por defecto */
   }
 
   /* Estilizar el desplegable al pasar el ratón por encima */
   select[name='filtro_artist']:hover,
   select[name='orderby']:hover {
-    background-color: #ccff00; /* Cambiar el color del borde al pasar el ratón */
+    background-color: #cf0; /* Cambiar el color del borde al pasar el ratón */
   }
 
   /* Estilizar el desplegable al estar enfocado */
