Reconstrucción Sage: scripts

--- a/site/web/app/themes/sage/resources/styles/app.css
+++ b/site/web/app/themes/sage/resources/styles/app.css
@@ -25,7 +25,7 @@
 @import 'componentes/forms';
 @import 'componentes/lightgallery';
 
-/* @import '@glidejs/glide/dist/css/glide.core.min.css'; */
+@import '@glidejs/glide/dist/css/glide.core.min.css';
 
 /* @import 'Select2/select2-bootstrap.css'; */
 
