Arreglar página artistas

--- a/site/web/app/themes/sage/resources/styles/layouts/artists.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/artists.css
@@ -28,7 +28,7 @@ body.artists {
     }
   }
 
-  @media (width < 786px) {
+  @media (width > 786px) {
     .article {
       h2 {
         width: 25vw;
