--- a/site/web/app/themes/sage/resources/styles/common/global.css
+++ b/site/web/app/themes/sage/resources/styles/common/global.css
@@ -68,17 +68,17 @@ main {
   }
 
   .contenido > * {
-    max-width: 768px;
+    max-width: 800px;
     margin-left: auto !important;
     margin-right: auto !important;
 
-    &.alignwide {
-      max-width: 1024px;
-      margin-left: auto !important;
-      margin-right: auto !important;
+    &.alignwide,
+    &.wide {
+      max-width: 1200px;
     }
 
-    &.alignfull {
+    &.alignfull,
+    &.full {
       max-width: none;
     }
   }
