--- a/site/web/app/themes/sage/resources/styles/common/variables.css
+++ b/site/web/app/themes/sage/resources/styles/common/variables.css
@@ -1,8 +1,6 @@
 :root {
-  --plyr-color-main: blue;
-  --plyr-control-radius: 0;
-  --plyr-badge-border-radius: 0;
-  --plyr-font-family: arial, sans-serif;
+  --media-brand: 245 245 245;
+  --media-focus: 78 156 246;
   --glide-element-separator: '__';
   --glide-modifier-separator: '--';
 }
