Video block: ajustes

--- a/site/web/app/themes/sage/resources/styles/common/global.css
+++ b/site/web/app/themes/sage/resources/styles/common/global.css
@@ -128,7 +128,7 @@ main {
   display: flex !important;
 }
 
-video:not([width]):not([height]),
+/* video:not([width]):not([height]),
 iframe:not([width]):not([height]) {
   aspect-ratio: auto !important;
-}
+} */
