Video block: ajustes

--- a/site/web/app/themes/sage/resources/styles/common/global.css
+++ b/site/web/app/themes/sage/resources/styles/common/global.css
@@ -133,3 +133,7 @@ iframe:not([width]):not([height]) {
   aspect-ratio: auto !important;
   width: 100% !important;
 }
+
+[data-media-provider] {
+  position: relative !important;
+}
