--- a/site/web/app/themes/sage/resources/styles/editor.css
+++ b/site/web/app/themes/sage/resources/styles/editor.css
@@ -27,3 +27,65 @@ iframe:not([width]):not([height]) {
   stroke: currentColor;
   stroke-width: 2px;
 }
+
+/* Estilos para el título */
+.editor-editor-canvas__post-title-wrapper .editor-post-title__input,
+.editor-editor-canvas__post-title-wrapper .wp-block-post-title {
+  font-size: 2em;
+  font-weight: bold;
+  color: #333;
+}
+
+/* Estilos para los encabezados */
+.editor-styles-wrapper h1,
+.editor-styles-wrapper h2,
+.editor-styles-wrapper h3,
+.editor-styles-wrapper h4,
+.editor-styles-wrapper h5,
+.editor-styles-wrapper h6 {
+  color: #333;
+  font-family: 'Arial', sans-serif;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+}
+
+.editor-styles-wrapper h1 {
+  font-size: 2em;
+}
+
+.editor-styles-wrapper h2 {
+  font-size: 1.75em;
+}
+
+.editor-styles-wrapper h3 {
+  font-size: 1.5em;
+}
+
+.editor-styles-wrapper h4 {
+  font-size: 1.25em;
+}
+
+.editor-styles-wrapper h5 {
+  font-size: 1em;
+}
+
+.editor-styles-wrapper h6 {
+  font-size: 0.875em;
+}
+
+/* Estilos para párrafos */
+.editor-styles-wrapper p {
+  font-size: 1em;
+  line-height: 1.6;
+  color: #555;
+}
+
+/* Estilos para enlaces */
+.editor-styles-wrapper a {
+  color: #0000ff;
+  text-decoration: none;
+}
+
+.editor-styles-wrapper a:hover {
+  color: #000;
+}
