--- a/site/web/app/themes/sage/resources/styles/fonts/fonts.css
+++ b/site/web/app/themes/sage/resources/styles/fonts/fonts.css
@@ -11,3 +11,11 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'ArialBlack';
+  src: url('../fonts/arialblack/ArialBlack.woff2') format('woff2'),
+    url('../fonts/arialblack/ArialBlack.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
