--- a/site/web/app/themes/sage/resources/styles/fonts/fonts.css
+++ b/site/web/app/themes/sage/resources/styles/fonts/fonts.css
@@ -1,5 +1,35 @@
 @font-face {
   font-family: Bugrino;
+  src: url('../fonts/bugrino/Bugrino-Black.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+}
+@font-face {
+  font-family: Bugrino;
+  src: url('../fonts/bugrino/Bugrino-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: Bugrino;
+  src: url('../fonts/bugrino/Bugrino-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: Bugrino;
+  src: url('../fonts/bugrino/Bugrino-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: Bugrino;
+  src: url('../fonts/bugrino/Bugrino-Thin.woff') format('woff');
+  font-weight: 100;
+  font-style: normal;
+}
+@font-face {
+  font-family: Bugrino;
   src: url('../fonts/bugrino/Bugrino-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
