Bloque de producto

--- a/site/web/app/themes/sage/resources/styles/common/global.css
+++ b/site/web/app/themes/sage/resources/styles/common/global.css
@@ -140,3 +140,9 @@ iframe:not([width]):not([height]) {
   position: relative !important;
   width: 100% !important;
 }
+
+.filtro-azul:hover * {
+  img {
+    filter: brightness(50%) sepia(100%) hue-rotate(190deg) saturate(500%);
+  }
+}
