--- a/site/web/app/themes/sage/resources/styles/layouts/cart.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/cart.css
@@ -5,6 +5,10 @@ body.cart {
     }
   }
 
+  .fill-rojo {
+    fill: #af0000;
+  }
+
   .cart-collaterals {
     .cart_totals {
       @apply bg-allo-claro pt-6 pb-12 px-6 md:px-0;
@@ -106,8 +110,8 @@ body.cart {
 
           a {
             img {
-              max-width: 5rem;
-              max-height: 5rem;
+              max-width: 7rem;
+              max-height: 7rem;
               width: auto;
               height: auto;
             }
@@ -160,7 +164,6 @@ body.cart {
       @media (width < 786px) {
         .tk-cell {
           &.product-thumbnail {
-            width: 13rem;
             flex-grow: 0;
             flex-shrink: 0;
 
@@ -171,13 +174,11 @@ body.cart {
           }
 
           &.product-data {
-            width: 35%;
             flex-grow: 0;
             flex-shrink: 0;
           }
 
           &.product-subtotal {
-            width: 16%;
             flex-grow: 0;
             flex-shrink: 0;
           }
