--- a/site/web/app/themes/sage/resources/styles/layouts/cart.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/cart.css
@@ -4,81 +4,31 @@ body.cart {
       height: 30px;
     }
   }
-
-  .fill-rojo {
-    fill: #af0000;
-  }
-
   .cart-collaterals {
     .cart_totals {
-      @apply bg-allo-claro pt-6 pb-12 px-6 md:px-0;
-
       h2 {
         @apply text-2xl text-center mb-6;
       }
 
-      .shop_table {
-        @apply mb-8;
-
-        tr {
-          border-bottom: 1px solid #000;
-
-          &:last-child {
-            border-bottom: none;
-          }
-
-          th {
-            @apply text-right pr-6 align-top py-3;
-          }
-
-          td {
-            @apply py-3 pr-6;
-          }
-
-          &.order-total {
-            @apply text-3xl;
-          }
-        }
-
-        .shipping {
-          .shipping-calculator-form {
-            p {
-              @apply my-2;
-            }
-          }
-
-          .shipping-calculator-button,
-          button {
-            @apply btn my-6 inline-block;
-          }
-
-          .select2-container--default {
-            .select2-selection {
-              box-shadow: 0;
-              background-color: #fff;
-              border: 0;
-              border-radius: 0;
-              outline: 0;
-              min-height: 3rem;
-              text-align: left;
-              margin-bottom: 0.1rem;
-
-              .select2-selection__rendered,
-              .select2-selection__arrow {
-                display: block;
-                padding: 0.8rem 1.5rem;
-              }
-
-              .select2-selection__arrow {
-                margin-top: 0.5rem;
-              }
-            }
-          }
-        }
-      }
-
       .checkout-button {
         color: #fff;
+      }
+
+      .woocommerce-shipping-calculator {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+
+        .shipping-calculator-button {
+          @apply px-4 py-2 bg-white border-2 border-black uppercase text-xs tracking-widest;
+        }
+
+        .shipping-calculator-form {
+          margin-top: 1rem;
+        }
+
+        input[type='text'] {
+          @apply px-4 py-2 mb-4;
+        }
       }
     }
   }
@@ -92,6 +42,35 @@ body.cart {
 
     li {
       padding: 0.8rem 1.5rem;
+    }
+  }
+
+  .select2-container--default {
+    .select2-selection {
+      box-shadow: 0;
+      background-color: #fff;
+      border: 0;
+      border-radius: 0;
+      outline: 0;
+      min-height: 3rem;
+      text-align: left;
+      margin-bottom: 1rem;
+
+      .select2-selection__rendered,
+      .select2-selection__arrow {
+        display: block;
+        padding: 0.8rem 1.5rem;
+      }
+
+      .select2-selection__arrow {
+        margin-top: 0.5rem;
+      }
+    }
+
+    .select2-results__option--highlighted[aria-selected],
+    .select2-results__option--highlighted[data-selected] {
+      background-color: #ffff00;
+      color: #000000;
     }
   }
 
@@ -130,13 +109,13 @@ body.cart {
             width: 4em;
           }
 
-          /* stylelint-disable property-no-vendor-prefix */
-
           input[type='number'] {
             appearance: textfield;
             width: 100%;
             display: block;
             padding: 1em;
+            -moz-appearance: textfield;
+            appearance: textfield;
 
             &::-webkit-inner-spin-button,
             &::-webkit-outer-spin-button {
@@ -144,8 +123,6 @@ body.cart {
               margin: 0;
             }
           }
-
-          /* stylelint-enable */
         }
 
         &.actions {
