--- a/site/web/app/themes/sage/resources/styles/layouts/cart.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/cart.css
@@ -15,11 +15,8 @@ body.cart {
       }
 
       .woocommerce-shipping-calculator {
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-
         .shipping-calculator-button {
-          @apply px-4 py-2 bg-white border-2 border-black uppercase text-xs tracking-widest;
+          @apply inline-block px-4 py-2 my-6 bg-white border-2 border-black uppercase text-xs tracking-widest;
         }
 
         .shipping-calculator-form {
