--- a/site/web/app/themes/sage/resources/styles/common/global.css
+++ b/site/web/app/themes/sage/resources/styles/common/global.css
@@ -7,6 +7,14 @@ html {
 }
 
 .main {
+  a {
+    @apply text-azul;
+
+    &:hover {
+      @apply text-negro-fb;
+    }
+  }
+
   @media (width >= 640px) {
     margin-top: 10rem;
 
@@ -21,7 +29,7 @@ html {
 }
 
 body {
-  @apply font-sans;
+  @apply font-sans text-negro-fb;
 }
 
 #fondo {
