--- a/site/web/app/themes/sage/resources/styles/common/global.css
+++ b/site/web/app/themes/sage/resources/styles/common/global.css
@@ -183,3 +183,9 @@ body.woocommerce-checkout {
 .mce_inline_error[for='mce-EMAIL'] {
   position: absolute;
 }
+
+#mce-responses {
+  position: absolute;
+  background-color: #000;
+  padding: 3px 5px;
+}
