--- a/site/web/app/themes/sage/resources/styles/common/global.css
+++ b/site/web/app/themes/sage/resources/styles/common/global.css
@@ -184,8 +184,9 @@ body.woocommerce-checkout {
   position: absolute;
 }
 
-#mce-responses {
+#mce-responses .response {
   position: absolute;
   background-color: #000;
   padding: 3px 5px;
+  color: #fff;
 }
