Shop: añadir sombra a la imagen en móvil

--- a/site/web/app/themes/sage/resources/styles/layouts/shop.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/shop.css
@@ -40,6 +40,14 @@
     }
   }
 
+  @media (width < 786px) {
+    .product .card-inner {
+      img {
+        box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+      }
+    }
+  }
+
   @media (width > 1024px) {
     .product .card-front {
       img {
