Home: destacados. los textos negros dentro de enlaces aparecen en azul en el portatil

--- a/site/web/app/themes/sage/resources/styles/layouts/front-page.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/front-page.css
@@ -2,8 +2,7 @@
   #destacados {
     article {
       a:link {
-        /* transition: background-color 0s; */
-        color: #000;
+        color: #000 !important;
       }
 
       &.galeria {
