--- a/site/web/app/themes/sage/resources/styles/layouts/shop.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/shop.css
@@ -20,7 +20,7 @@
     width: 100%;
     height: 100%;
     top: 0;
-    transform: rotateY(180deg);
+    /* transform: rotateY(180deg); */
   }
 
   .card-front {
