--- a/site/web/app/themes/sage/resources/styles/layouts/cart.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/cart.css
@@ -43,7 +43,7 @@ body.cart {
   }
 
   .select2-container--default {
-    width: 100%;
+    width: 100% !important;
 
     .select2-selection {
       box-shadow: 0;
