--- a/site/web/app/themes/sage/resources/styles/app.css
+++ b/site/web/app/themes/sage/resources/styles/app.css
@@ -18,6 +18,7 @@
 @import 'layouts/checkout';
 @import 'layouts/single-product';
 @import 'layouts/single-variable-product';
+@import 'layouts/blocks';
 @import 'componentes/select';
 @import 'componentes/lightgallery';
 
