--- a/site/web/app/themes/sage/resources/styles/layouts/cart.css
+++ b/site/web/app/themes/sage/resources/styles/layouts/cart.css
@@ -176,4 +176,11 @@ body.cart {
   .woocommerce-shipping-calculator button[name='calc_shipping'] {
     @apply inline-block px-4 py-2 my-6 bg-white border-2 border-black uppercase text-xs tracking-widest;
   }
+
+  #calc_shipping_country,
+  #calc_shipping_state {
+    background-color: white;
+    padding: 1rem;
+    margin-bottom: 1rem;
+  }
 }
